--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,9 @@ jobs:
       with:
         distribution: 'adopt'
         java-version: '11'
+        
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
 
     - name: Download dependencies
       run: ./gradlew build --no-daemon
