--- a/.github/workflows/attach_debug_apks_to_release.yml
+++ b/.github/workflows/attach_debug_apks_to_release.yml
@@ -20,6 +20,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ env.GITHUB_REF }}
+          
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
 
       - name: Build and attach APKs to release
         shell: bash {0}
