--- a/build.gradle
+++ b/build.gradle
@@ -19,3 +19,15 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+subprojects {
+    afterEvaluate { project ->
+        if (project.hasProperty("android")) {
+            project.android {
+                lintOptions {
+                    abortOnError false
+                }
+            }
+        }
+    }
+}
