--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,9 @@ jobs:
         
     - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew
+        
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
 
     - name: Download dependencies
       run: ./gradlew build --no-daemon
