--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
     - name: Checkout code4
       uses: actions/checkout@v4
+      
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
            
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
