--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,7 @@
-name: Android CI
+name: Build and Upload APK
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
     branches:
       - main
 
@@ -13,29 +10,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code4
+    - name: Checkout code
       uses: actions/checkout@v2
-      
-    - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
-           
+
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         distribution: 'adopt'
         java-version: '11'
-        
-    - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
 
-    - name: Download dependencies
-      run: ./gradlew build --no-daemon
-
-    - name: Build APK
+    - name: Build with Gradle
       run: ./gradlew assembleDebug --no-daemon
 
     - name: Upload APK
       uses: actions/upload-artifact@v2
       with:
-        name: app-debug.apk
+        name: app-debug-apk
         path: app/build/outputs/apk/debug/app-debug.apk
+        if-no-files-found: warn
